...
                    fontSize: 16,
                    color: Colors.black87,
                  ),
                ),
                SizedBox(height: 20),
                ElevatedButton(
                  key: const Key('lanjutkanButton'),
                  onPressed: () {
                    print("Tombol lanjutkan ditekan");

                    final binding = WidgetsBinding.instance;
                    final bool inWidgetTest =
                        binding is TestWidgetsFlutterBinding;
...
                                  // Tombol masuk
                                  SizedBox(
                                    width: double.infinity,
                                    height: 55,
                                    child: ElevatedButton(
                                      key: Key(
                                          'loginButton'), // Menggunakan Key bukan ValueKey
                                      onPressed: (_isEmailFilled &&
                                              _isPasswordFilled &&
                                              !_isLoading)
                                          ? _handleLogin
                                          : null,
                                      style: ElevatedButton.styleFrom(
...

    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        TextField(
          key: Key(label == "Email"
              ? 'emailField'
              : label == "Kata Sandi"
                  ? 'passwordField'
                  : ''),
          controller: controller,
          obscureText: isPassword ? obscureText : false,
          keyboardType: keyboardType,
          textInputAction: textInputAction,
          onEditingComplete: isPassword ? _dismissKeyboard : null,
...
