...
          // Baris pertama: jika guest tampilkan tombol login, jika tidak tampilkan notifikasi dan chat
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
              if (_userId == null)
                ElevatedButton.icon(
                  key: ValueKey("guestLoginButton"),
                  onPressed: () {
                    Navigator.pushReplacement(
                      context,
                      MaterialPageRoute(builder: (context) => LoginScreen()),
                    );
                  },
...
                  children: [
                    Icon(Icons.motorcycle,
                        color: Colors.white.withOpacity(0.9), size: 16),
                    SizedBox(width: 8),
                    Text(
                      "Temukan Motor Rental Terbaik",
                      key: ValueKey('homepageTitle'),
                      style: TextStyle(
                        fontSize: 16,
                        color: Colors.white.withOpacity(0.9),
                        fontWeight: FontWeight.w500,
                      ),
                    ),
...
